# razer_test

./: .appveyor.yml  .build.yml  .gitignore  .travis.yml  devicemanager.xml  meson.build  meson_options.txt  razer_test.c  razer_test.cpp  razer_test.h  razerdevice.cpp  razerdevice.h  razerdevice.xml  razerled.h  razerled.xml  razerreport.cpp  razerreport.h
.ci/: Dockerfile.alpine  Dockerfile.ubuntu  travis_install.sh  travis_script.sh
.github/workflows/: macos.yml  ubuntu.yml
data/: io.github.openrazer1.conf  io.github.openrazer1.service.in  keyboard.json  mouse.json  mousepad.json  razer_test.service.in
data/devices/: accessory.json  keyboard.json  mouse.json  mousepad.json
dbus/: razerdevice.xml  razerled.xml
include/: openrazer.h  razer_test.h
scripts/: format-devices-json.py  format_source.sh  generate_dbus_cpp.sh  generate_dbus_xml.sh  local_user_setup.sh
scripts/qdbuscpp2xml-plugin/: meson.build  myplugin.cpp  myplugin.h  plugininterface.h
src/: config.h.in  daemon.cpp  daemon.h  main.cpp  razer_test.cpp  razer_test.h  razer_test_private.h  razerreport.cpp  razerreport.h  validjsonvalues.h
src/bringup/: bringuputil.cpp  bringuputil.h
src/customeffect/: customeffectbase.cpp  customeffectbase.h  customeffectthread.cpp  customeffectthread.h  spectrumeffect.cpp  spectrumeffect.h  waveeffect.cpp  waveeffect.h
src/dbus/: devicemanageradaptor.cpp  devicemanageradaptor.h  enumDBus.h  razerdeviceadaptor.cpp  razerdeviceadaptor.h  razerledadaptor.cpp  razerledadaptor.h
src/device/: razerclassicdevice.cpp  razerclassicdevice.h  razerdevice.cpp  razerdevice.h  razerfakedevice.cpp  razerfakedevice.h  razermatrixdevice.cpp  razermatrixdevice.h
src/devnotifier/: devicenotifierlinux.cpp  devicenotifierlinux.h  devicenotifiermac.cpp  devicenotifiermac.h  idevicenotifier.h
src/led/: razerclassicled.cpp  razerclassicled.h  razerfakeled.cpp  razerfakeled.h  razerled.cpp  razerled.h  razermatrixled.cpp  razermatrixled.h  razermousematrixled.cpp  razermousematrixled.h
src/manager/: devicemanager.cpp  devicemanager.h
subprojects/: hidapi.wrap
test/: meson.build  sometest.cpp  sometest.h  testJsonValidity.cpp
